# FlexReviewApi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py
alembic/: env.py
app/: __init__.py  main.py  models.py
app/core/: config.py  logging_config.py
app/database/: base.py  models.py
app/middleware/: rate_limiting.py  request_logging.py
app/routes/: reviews.py
app/scripts/: __init__.py  seed_database.py
app/services/: hostaway.py  normalizer.py  review_approval.py  review_repository.py
data/: mock_reviews.json
