[project]
name = "flex-review-backend"
version = "0.1.0"
description = "Backend API for Flex Living Reviews Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.core", "app.routes", "app.services"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]
